# cmps366-pente-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: Bug Report.docx  Data Structures.docx  Description of Classes.docx  Submission Manual.docx  cpp-rubric.doc  cppRubric.doc  description.md  guidelines.md
serials/: case1-prioritizing_capturing.txt  case2-prioritizing_capturing.txt  case3-prioritizing_blocking.txt  case4-prioritizing_blocking.txt
src/: Board.cpp  Board.h  BoardDisplay.cpp  BoardDisplay.h  CMakeLists.txt  Computer.cpp  Computer.h  Exceptions.h  ExperimentalBoard.h  Human.cpp  Human.h  MoveAnalysis.cpp  MoveAnalysis.h  Player.h  Position.cpp  Position.h  Roster.cpp  Roster.h  Round.cpp  Round.h  RoundDisplay.cpp  RoundDisplay.h  Serial.cpp  Serial.h  SerialFile.cpp  SerialFile.h  Strategy.cpp  Strategy.h  Tournament.cpp  Tournament.h  TournamentAnnouncement.cpp  TournamentAnnouncement.h  UnicodeDisplayHelpers.cpp  UnicodeDisplayHelpers.h  foo.cpp  helpers.cpp  helpers.h  main.cpp  main_human_v_human.cpp
tests/: BoardTests.cpp  CMakeLists.txt  FrameworkTests.cpp  MoveAnalysisTests.cpp  PositionTest.cpp  RosterTests.cpp  SerialTests.cpp  test.cpp  tests.cpp
tests/serials/: load.input
